# MidiPlayerRackApp

./: README.md  flutter_rust_bridge.yaml  pubspec.yaml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/midi_player/: MainActivity.kt
integration_test/: simple_test.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/l10n/: app_en.arb  app_localizations.dart  app_localizations_en.dart  app_localizations_nl.dart  app_nl.arb
lib/src/rust/: frb_generated.dart  frb_generated.io.dart
lib/src/rust/api/: midi_playback.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugins.cmake
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
rust/: Cargo.toml
rust/src/: frb_generated.rs  lib.rs
rust/src/api/: midi_playback.rs  mod.rs
rust/src/midi_synth/: synth.rs
rust/src/sampling/: midi_channel_sampler.rs  mod.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/android/src/main/: AndroidManifest.xml
rust_builder/ios/: rust_lib_midi_player.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_midi_player.podspec
rust_builder/windows/: CMakeLists.txt
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
