
[package]
name = "rust_lib_midi_player"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.11.1"
rustysynth = "1.3.6"
tinyaudio = "1.1.0"
itertools = "0.14.0"
snafu = "0.8.9"
cpal = "0.16.0"
rodio = "0.21.1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
